--- a/assets/sass/components/_customer_feedback.scss
+++ b/assets/sass/components/_customer_feedback.scss
@@ -212,11 +212,11 @@
     }
 }
 
-.gm_testi_author {
+.zc_testi_author {
     margin-left: 64px;
     padding-left: 72px;
     position: relative;
-    padding-top: 3.5px;
+    padding-top: 3.5px; 
     min-height: 56px;
 
     & img {
